fixed submit button not lining up and days not correctly aligned

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,7 +94,7 @@ footer {
 main {
   padding: 30px;
 }
-header .fixed-width img {
+header img {
   height: 30px;
   width: 30px;
   padding: 10px;
@@ -109,7 +109,7 @@ header {
   line-height: 50px;
 }
 header div nav {
-  padding-left: 166px;
+  margin-left: auto;
 }
 footer div {
   display: flex;
@@ -193,7 +193,7 @@ article {
 
 /*** INSERT YOUR WORK BELOW: ***/
 form {
-  margin: 45px 0px;
+  padding: 45px 0px;
 }
 label {
   display: block;
@@ -202,13 +202,13 @@ label {
 }
 input {
   width: 100px;
-  margin: 7.5px;
+  margin-right: 15px;
 }
 button {
   height: 21px;
-  width: 100px;
+  width: 108px;
   margin-top: 30px;
-  margin-left: 500px;
+  margin-left: 492px;
   border: 1px solid grey;
   background-color: white;
   border-radius: 4px;
